# JubiterSDK_C

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .ignore  CMakeLists.txt  README  README.md
JubSDKCoreOC/: CMakeLists.txt  JubSDKCore+COIN_BTC.mm  JubSDKCore+COIN_EOS.h  JubSDKCore+COIN_EOS.mm  JubSDKCore+COIN_ETH.h  JubSDKCore+COIN_ETH.mm  JubSDKCore+COIN_HCash.h  JubSDKCore+COIN_HCash.mm  JubSDKCore+COIN_XRP.h  JubSDKCore+COIN_XRP.mm  JubSDKCore+DEV.mm  JubSDKCore+DEV_BLE.mm  JubSDKCore.h  JubSDKCore.mm
protos/: CMakeLists.txt  Jub_Bitcoin.proto  Jub_Common.proto  Jub_Ethereum.proto
protos/cpp/: Jub_Bitcoin.pb.cc  Jub_Bitcoin.pb.h  Jub_Common.pb.cc  Jub_Common.pb.h  Jub_Ethereum.pb.cc  Jub_Ethereum.pb.h
protos/protobuf_java/cmake/: CMakeLists.txt
src/: CMakeLists.txt  JUB_SDK.cpp  JUB_SDK_BTC.cpp  JUB_SDK_CKB.cpp  JUB_SDK_COMM.cpp  JUB_SDK_DEV.cpp  JUB_SDK_DEV_BIO.cpp  JUB_SDK_DEV_BLE.cpp  JUB_SDK_DEV_GRPC.cpp  JUB_SDK_DEV_HID.cpp  JUB_SDK_DEV_NFC.cpp  JUB_SDK_DEV_SIM.cpp  JUB_SDK_DEV_SWI.cpp  JUB_SDK_DOT.cpp  JUB_SDK_EOS.cpp  JUB_SDK_ETH.cpp  JUB_SDK_FIL.cpp  JUB_SDK_Hcash.cpp  JUB_SDK_KSM.cpp  JUB_SDK_SOL.cpp  JUB_SDK_TRX.cpp  JUB_SDK_XRP.cpp  JUB_core.cpp
src/HDKey/: HDKey.cpp
src/context/: BTCContext.cpp  BTCContextMultiSigExt.cpp  BaseContext.cpp  CKBContext.cpp  Context.cpp  ContextBTC.cpp  ContextEOS.cpp  ContextETH.cpp  ContextHC.cpp  ContextXRP.cpp  DOTContext.cpp  EOSContext.cpp  ETHContext.cpp  FILContext.cpp  HCContext.cpp  KSMContext.cpp  QTUMContext.cpp  SOLContext.cpp  TRXContext.cpp  XRPContext.cpp
src/device/: ApduBuilder.cpp  DeviceManager.cpp  Fido.cpp  JubiterBLEDevice.cpp  JubiterBridgeDevice.cpp  JubiterHidDevice.cpp  JubiterNFCDevice.cpp  JubiterSWIDevice.cpp
src/libBCH/: cashaddr.cc  libBCH.cpp
src/libBTC/: libBTC.cpp
src/libEOS/: libEOS.cpp
src/libETH/: AddressChecksum.cpp  ByteConverter.cpp  ERC20Abi.cpp  RLP.cpp
src/libHC/: libHC.cpp
src/libXRP/: libXRP.cpp
src/test/JUB_SDK_test/: JUB_SDK_test.cpp  JUB_SDK_test.vcxproj  JUB_SDK_test.vcxproj.filters  test-12-12.json  test.json  testETH.json
src/token/: HardwareTokenImpl.cpp  JubiterBIOToken.cpp  JubiterBLDImpl.cpp  JubiterBLDImplBTC.cpp  JubiterBLDImplEOS.cpp  JubiterBLDImplETH.cpp  JubiterBLDImplHC.cpp  JubiterBLDImplXRP.cpp  JubiterBladeToken.cpp  JubiterLiteImpl.cpp  JubiterLiteToken.cpp  JubiterNFCImpl.cpp  JubiterNFCToken.cpp  JubiterOneImpl.cpp  TokenManager.cpp  TrezorCryptoImpl.cpp  TrezorCryptoToken.cpp
src/token/BTC/: BaseBTCImpl.cpp  JubiterBaseBCHImpl.cpp  JubiterBaseBTCImpl.cpp  JubiterBaseDashImpl.cpp  JubiterBladeBTCImpl.cpp  JubiterBladeQTUMImpl.cpp  JubiterLiteBCHImpl.cpp  JubiterLiteBTCImpl.cpp  JubiterLiteQTUMImpl.cpp  JubiterNFCBCHImpl.cpp  JubiterNFCBTCImpl.cpp  JubiterNFCQTUMImpl.cpp  TrezorCryptoBCHImpl.cpp  TrezorCryptoBTCImpl.cpp  TrezorCryptoDashImpl.cpp  TrezorCryptoQTUMImpl.cpp
src/token/CKB/: JubiterBaseCKBImpl.cpp  JubiterBladeCKBImpl.cpp  JubiterLiteCKBImpl.cpp  TrezorCryptoCKBImpl.cpp
src/token/DOT/: JubiterBaseDOTImpl.cpp  JubiterBladeDOTImpl.cpp  JubiterLiteDOTImpl.cpp  TrezorCryptoDOTImpl.cpp
src/token/EOS/: JubiterBIOEOSImpl.cpp  JubiterBaseEOSImpl.cpp  JubiterBladeEOSImpl.cpp  JubiterLiteEOSImpl.cpp  JubiterNFCEOSImpl.cpp  TrezorCryptoEOSImpl.cpp
src/token/ETH/: JubiterBIOETHImpl.cpp  JubiterBaseETHImpl.cpp  JubiterBladeETHImpl.cpp  JubiterLiteETHImpl.cpp  JubiterNFCETHImpl.cpp  TrezorCryptoETHImpl.cpp
src/token/FIL/: JubiterBaseFILImpl.cpp  JubiterBladeFILImpl.cpp  JubiterLiteFILImpl.cpp  TrezorCryptoFILImpl.cpp
src/token/HC/: JubiterBaseHCImpl.cpp  JubiterBladeHCImpl.cpp  JubiterLiteHCImpl.cpp  TrezorCryptoHCImpl.cpp
src/token/SOL/: JubiterBIOSOLImpl.cpp  JubiterBaseSOLImpl.cpp  JubiterBladeSOLImpl.cpp  JubiterLiteSOLImpl.cpp  TrezorCryptoSOLImpl.cpp
src/token/TRX/: JubiterBIOTRXImpl.cpp  JubiterBaseTRXImpl.cpp  JubiterBladeTRXImpl.cpp  (+3 more)
src/utility/: Debug.cpp  mutext.cpp  util.cpp
test/: CMakeLists.txt  README.md  ip_bridge.info
test/JUB_SDK_test/: JUB_SDK_main.cpp  JUB_SDK_main.h  JUB_SDK_software_test_btc.cpp  JUB_SDK_software_test_btc.hpp  JUB_SDK_software_test_dot.cpp  JUB_SDK_software_test_dot.hpp  JUB_SDK_software_test_eos.cpp  JUB_SDK_software_test_eos.hpp  JUB_SDK_software_test_eth.cpp  JUB_SDK_software_test_eth.hpp  JUB_SDK_software_test_fil.cpp  JUB_SDK_software_test_fil.hpp  JUB_SDK_software_test_hcash.cpp  JUB_SDK_software_test_hcash.hpp  JUB_SDK_software_test_trx.cpp  JUB_SDK_software_test_trx.hpp  JUB_SDK_software_test_xrp.cpp  JUB_SDK_software_test_xrp.hpp  JUB_SDK_test.cpp  JUB_SDK_test.h  JUB_SDK_test_btc.cpp  JUB_SDK_test_btc.hpp  JUB_SDK_test_ckb.cpp  JUB_SDK_test_ckb.hpp  JUB_SDK_test_dev.cpp  JUB_SDK_test_dev.hpp  JUB_SDK_test_dev_bio.cpp  JUB_SDK_test_dev_bio.hpp  JUB_SDK_test_dev_swi.cpp  JUB_SDK_test_dev_swi.hpp  JUB_SDK_test_dot.cpp  JUB_SDK_test_dot.hpp  JUB_SDK_test_eos.cpp  JUB_SDK_test_eos.hpp  JUB_SDK_test_eth.cpp  JUB_SDK_test_eth.hpp  JUB_SDK_test_fil.cpp  JUB_SDK_test_fil.hpp  JUB_SDK_test_hcash.cpp  JUB_SDK_test_hcash.hpp  (+15 more)
test/json/: EIP1559.json  EIP712.json  EIP712TP.json  EIP712TP_with_uint8.json  EIP712_array.json  EIP712_with_bytes32.json  test86.py  test97-example.txt  testBTC44.json  testBTC45_1.json  testBTC45_2.json  testBTC49.json  testBTC84.json  testBTC84.txt  testBTC86.json  testBTC86.txt  testBTCTN44.json  testBTCTN49.json  testBTCTN84.json  testCKB.json  testCKBNT.json  testCKBTN.json  testDOT.json  testDOTTN.json  testDOTTN_ed25519.json  testDOTTN_sr25519.json  testEOS.json  testEOS_stake.json  testEOS_unstake.json  testETH.json  testFIL.json  testHCash.json  testHCash_multisig.json  testHCash_multisig_2.json  testKSM.json  testLTC.json  testMergeMultiSig.json  testMnemonic.json  testQTUM.json  testSOL.json  (+9 more)
test/json_test/: testBCH.json  testBTC44.json  testBTC49.json  testDASH.json  testHCash.json  testHCash_multisig.json  testHCash_multisig_2.json  testLTC.json  testQTUM.json  testQTUM_qrc20.json  testSeed.json  testUSDT.json
test/settings/: 42584E46433230303532353030303031_apk.settings  42584E46433230303532353030303032_apk.settings
(+508 files in other folders)
